# Photos-Drive

./: .gitignore  Makefile  README.md  ~
apps/cli-client/: .!57422!.coverage  .flake8  README.md  pyproject.toml
apps/cli-client/docs/: create_client_id.md  create_google_client_id.md  create_google_oauth2_client.md  create_mongodb_connection_string.md  getting_started.md  store_config_on_mongodb.md  store_photos_data_on_mongodb.md
apps/cli-client/photos_drive/backup/: backup_photos.py  diffs.py  diffs_assignments.py  gphotos_uploader.py  processed_diffs.py
apps/cli-client/photos_drive/clean/: clean_system.py
apps/cli-client/photos_drive/cli/: app.py
apps/cli-client/photos_drive/cli/commands/: add.py  clean.py  compare_embeddings.py  delete.py  llm.py  sync.py  teardown.py  usage.py
apps/cli-client/photos_drive/cli/shared/: files.py
apps/cli-client/photos_drive/diff/: get_diffs.py
apps/cli-client/photos_drive/shared/config/: config.py  config_from_file.py  config_from_mongodb.py  inmemory_config.py
apps/cli-client/photos_drive/shared/maps/: map_cells_repository.py
apps/cli-client/photos_drive/shared/metadata/: albums.py  albums_pruner.py  albums_repository.py  media_items.py  media_items_repository.py
apps/cli-client/photos_drive/shared/tiles/: tiles_repository.py
apps/cli-client/sharded_photos_drive_cli_client/backup/: backup_photos.py  diffs.py  diffs_assignments.py  gphotos_uploader.py  processed_diffs.py
apps/cli-client/sharded_photos_drive_cli_client/clean/: clean_system.py
apps/cli-client/sharded_photos_drive_cli_client/cli/: add_file_hashes_handler.py  add_handler.py  backup_handler.py  clean_handler.py  delete_handler.py  main.py  sync_handler.py  teardown_handler.py  usage_handler.py  utils.py
apps/cli-client/sharded_photos_drive_cli_client/cli/config/: add_gphotos_handler.py  add_mongodb_handler.py  common_prompts.py  init_handler.py  reauthorize_gphotos_handler.py  reauthorize_handler.py  reauthorize_mongodb_handler.py  utils.py
apps/cli-client/sharded_photos_drive_cli_client/cli2/: app.py  main.py
apps/cli-client/sharded_photos_drive_cli_client/cli2/commands/: add.py  add_album_id_fields_to_media_items.py  clean.py  delete.py  sync.py  teardown.py  usage.py
apps/cli-client/sharded_photos_drive_cli_client/cli2/shared/: utils.py
apps/cli-client/sharded_photos_drive_cli_client/cli2/utils/: config.py  (+1 more)
apps/cli-client/sharded_photos_drive_cli_client/diff/: get_diffs.py
apps/cli-client/tests/backup/: test_backup_photos.py  test_diffs_assignments.py  test_gphotos_uploader.py  test_processed_diffs.py
apps/cli-client/tests/clean/: test_clean_system.py
apps/cli-client/tests/cli/: test_utils.py
apps/cli-client/tests/diff/: test_get_diffs.py
apps/cli-client/vector_store/: index.faiss  index.pkl
(+822 files in other folders)
